--- a/html/contato.html
+++ b/html/contato.html
@@ -22,26 +22,10 @@
             <a class="navbar" href="projetos.html">Projetos</a>
             <a class="navbar" href="/html/contato.html">Contato</a>
         </nav>
-
     </div>
-    <div class="content">
-        
-        <div class="content-text">  
-            <H1 id="text">HELLO WORD...
-            </H1>
-
-            <p>Sou fascinado por tecnologia, acho incrível o modo que somos 
-            capazes de resolver problemas e tornar a nossa vida mais fácil com o uso da tecnologia. Sempre tive um carinho enorme pela área depois de uma migração de carreira, resolvi entrar de cabeça no mercado e cada dia que passa venho me apaixonando mais e mais.
-            </p>
-
-        </div>
-        <div class="content-img">
-            <img class="img" src="/img/home.jpg" alt="" srcset="">
-            
-
-        </div>
-
+    <div  class="contato">
+    <h2>Para contato:</h2>
+    <p>E-mail: rodrigom376@gmail.com</p>
     </div>
-    <script src="/script/script.js"></script>
 </body>
 </html>
