--- a/html/projetos.html
+++ b/html/projetos.html
@@ -20,9 +20,9 @@
     <div class="header">
         <nav>
             <a class="navbar" href="index.html">Home</a>
-            <a class="navbar" href="https://drive.google.com/file/d/1cnmg20873Rndm-HM7x62pgWQowc_Ldgo/view?usp=sharing">Currículo</a>
+            <a class="navbar" href="https://drive.google.com/file/d/1cnmg20873Rndm-HM7x62pgWQowc_Ldgo/view?usp=sharing" target="_blank" >Currículo</a>
             <a class="navbar" href="projetos.html">Projetos</a>
-            <a class="navbar" href="">Contato</a>
+            <a class="navbar" href="/html/contato.html">Contato</a>
         </nav>
 
     </div>
