--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
             <a class="navbar" href="index.html">Home</a>
             <a class="navbar" href="https://drive.google.com/file/d/1cnmg20873Rndm-HM7x62pgWQowc_Ldgo/view?usp=sharing" target="_blank">Currículo</a>
-            <a class="navbar" href="/html/projetos.html">Projetos</a>
-            <a class="navbar" href="/html/contato.html">Contato</a>
+            <a class="navbar" href="projetos.html">Projetos</a>
+            <a class="navbar" href="contato.html">Contato</a>
         </nav>
 
     </div>
@@ -42,6 +42,6 @@
         </div>
 
     </div>
-    <script src="/script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
