--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
             <a class="navbar" href="index.html">Home</a>
             <a class="navbar" href="https://drive.google.com/file/d/1cnmg20873Rndm-HM7x62pgWQowc_Ldgo/view?usp=sharing" target="_blank">Currículo</a>
             <a class="navbar" href="projetos.html">Projetos</a>
-            <a class="navbar" href="/html/contato.html">Contato</a>
+            <a class="navbar" href="contato.html">Contato</a>
         </nav>
     </div>
     <div  class="contato">
