--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         </div>
         <div class="content-img">
-            <img class="img" src="/img/home.jpg" alt="" srcset="">
+            <img class="img" src="home.jpg" alt="" srcset="">
             
 
         </div>
