--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,7 @@
 <body>
     <div class="header">
         <nav>
-            <a class="navbar" href="/index.html">Home</a>
+            <a class="navbar" href="index.html">Home</a>
             <a class="navbar" href="https://drive.google.com/file/d/1cnmg20873Rndm-HM7x62pgWQowc_Ldgo/view?usp=sharing" target="_blank" >Currículo</a>
             <a class="navbar" href="projetos.html">Projetos</a>
             <a class="navbar" href="contato.html">Contato</a>
