--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <H1 id="text">HELLO WORD...
             </H1>
 
-            <p>Sou fascinado por tecnologia, acho incrível o modo que somos 
+            <p class="text-home">Sou fascinado por tecnologia, acho incrível o modo que somos 
             capazes de resolver problemas e tornar a nossa vida mais fácil com o uso da tecnologia. Sempre tive um carinho enorme pela área depois de uma migração de carreira, resolvi entrar de cabeça no mercado e cada dia que passa venho me apaixonando mais e mais.
             </p>
 
