--- a/projetos.html
+++ b/projetos.html
@@ -40,9 +40,11 @@
 
             <div class="contente-projeto-iten">  
                 <a href=""> 
-                    <img class="img-iten" src="construction.png" alt="" srcset="">
-                    <p class="text-iten">Projeto em Construção</p>
-                </a> 
+                    <img class="img-iten" src="calc.png" alt="" srcset="">
+                    <p class="text-iten">Calculadora em Javascript</p>
+                </a>
+                <button id="btnbolsagit" class="btnportifolio"  onclick="clicargitcalc()">GitHub</button>
+                <button class="btnportifolio" onclick="clicarpagecalc()">Landig Page</button> 
             </div>
 
             <div class="contente-projeto-iten">  
